--- a/vertx/frontend/src/main/resources/webroot/index.html
+++ b/vertx/frontend/src/main/resources/webroot/index.html
@@ -67,7 +67,7 @@
                     <p>You have successfully deployed a Microservices Application on Openshift</p>
                 </div>
                 <div class="col-xs-6 sbases">
-                    <img src="./gfx/open-source-day-logo.png">
+                    <img src="./gfx/osd_logo_white.png">
                 </div>
             </div>
             <div class="col-xs-12">
