--- a/vertx/frontend/src/main/resources/webroot/index.html
+++ b/vertx/frontend/src/main/resources/webroot/index.html
@@ -61,13 +61,13 @@
         <div class="row">
             <div class="col-xs-12 header">
                 <div class="col-xs-6">
-                <img src="./gfx/redhat.png">
+                <img src="/gfx/redhat.png">
                     <h1>Welcome to Open Source Day!</h1>
 
                     <p>You have successfully deployed a Microservices Application on Openshift</p>
                 </div>
                 <div class="col-xs-6 sbases">
-                    <img src="./gfx/osd_logo_white.png">
+                    <img src="/gfx/osd_logo_white.png">
                 </div>
             </div>
             <div class="col-xs-12">
